# ssplit-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettingsCI.json  LICENSE.md  README.md  vcpkg.json
.github/workflows/: build-windows-2019-cpu.yml  core.yml  hosted-pure-workflow.yml  mac-internal-pcre2.yml  mac.yml  ubuntu-abseil+pcre2.yml  ubuntu-emscripten.yml  ubuntu-internal-pcre2.yml  ubuntu.yml  windows.yml  windows2.yml
cmake/: FindPCRE2.cmake  FindPCRECPP.cmake  FindPCRECPP.cmake~  ProvideAbseil.cmake  ProvidePCRE2.cmake
docker/rockylinux/: Dockerfile
nonbreaking_prefixes/: nonbreaking_prefix.en
scripts/: test.sh  test_local.sh
src/: CMakeLists.txt
src/command/: ssplit_main.cpp  test.cpp  test2.cpp  test3.cpp  test_ssplit.cpp
src/ssplit/: regex.cpp  regex.h  ssplit.cpp  ssplit.h  ssplit_typedefs.h.in  typedefs.h
tests/: sample.en  sample.en.mp.n.expected  sample.en.ms.n.expected  sample.en.one_paragraph_per_line.expected  sample.en.one_sentence_per_line.expected  sample.en.wrapped  sample.en.wrapped.expected  sample.en.wrapped.mw.n.expected
